--- a/texDocs/cv.tex
+++ b/texDocs/cv.tex
@@ -148,27 +148,15 @@ Graduated as valedictorian of the College of Science, class of 2020
 
 \end{interests}
 
-\subsection*{Working Papers}
-
-\begin{reflist}
-
-    \item Wheeler, J., Ionides, E. (2024). Likelihood Based Inference for ARMA models. {\it arXiv:2310.01198}. In review.
-
-    \item Bret\'o, C., Wheeler, J., King, A., Ionides, E. L. (2024). panelPomp: Analysis of Panel Data via Partially Observed Markov Processes in R. {\it arXiv:2410.07934}. In review.
-
-    \item Yang, B., Wheeler, J., King, A., Duffy, M., Ionides, E. L. (2024). Mechanistic Models for Panel Data: Analysis of Ecological Experiments with Four Interacting Species. {\it In preparation}.
-
-\end{reflist}
-
 \subsection*{Peer Reviewed Publications}
 
 \begin{reflist}
 
-    \item Wheeler, J., Rosengart, A., Jiang, Z., Tan, K., Truetle, N., Ionides, E. (2024). Informing policy via dynamic models: Cholera in Haiti. {PLOS Computational Biology}, 20(4), e1012032. \\ doi:10.1371/journal.pcbi.1012032
+    \item Ionides, E. L., Ning, N. and Wheeler, J. (2024). An iterated block particle filter for inference on coupled dynamic systems with shared and unit-specific parameters. {\it Statistica Sinica}, 34, 1241-1262. doi:10.5705/ss.202022.0188.
+
+    \item Wheeler, J., Rosengart, A., Jiang, Z., Tan, K., Truetle, N., Ionides, E. (2024). Informing policy via dynamic models: Cholera in Haiti. {\it PLOS Computational Biology}, 20(4), e1012032. \\ doi:10.1371/journal.pcbi.1012032
 
     \item Wagstaff, J., Bean, B., Wheeler, J., Maguire, M., Sun, Y. (2024). Adaptive Mapping of Design Ground Snow Loads in the Conterminous United States. {\it Journal of Structural Engineering}, 150(1), 04023193. doi:10.1061/JSENDH.STENG-12396
-
-    \item Ionides, E. L., Ning, N. and Wheeler, J. (2024). An iterated block particle filter for inference on coupled dynamic systems with shared and unit-specific parameters. {\it Statistica Sinica}, 34, 1241-1262. doi:10.5705/ss.202022.0188.
 
     \item Wheeler, J., Bean, B., Maguire, M. (2022). Creating a Universal Depth-to-Load Conversion Technique for the Conterminous United States Using Random Forests. {\it Journal of Cold Regions Engineering, 36(1), 04021019}. doi:10.1061/(ASCE)CR.1943-5495.0000270
 
@@ -183,6 +171,20 @@ Graduated as valedictorian of the College of Science, class of 2020
     \item Bean, B., Maguire, M., Sun, Y., Wagstaff, J., Al-Rubaye, S., Wheeler, J., Jarman, S., Rogers, M. (2021). The 2020 National Snow Load Study. {\it Utah State University}. doi:10.26077/200k-pr86.
 
     \item Ionides, E. L., Wheeler, J. (2024). Review 2: ``Efficacy, Public Health Impact and Optimal Use of the Takeda Dengue Vaccine." Rapid Reviews Infectious Diseases. doi:10.1162/2e3983f5.1f0cb1f4.
+
+\end{reflist}
+
+\subsection*{Working Papers}
+
+\begin{reflist}
+
+    \item Wheeler, J., Ionides, E. L. (2024). Likelihood Based Inference for ARMA models. {\it arXiv:2310.01198}. {\it In review}.
+
+    \item Bret\'o, C., Wheeler, J., King, A., Ionides, E. L. (2024). panelPomp: Analysis of Panel Data via Partially Observed Markov Processes in R. {\it arXiv:2410.07934}. {\it In review}.
+
+    \item Wheeler, J., Abkemeier, A. A., Ionides, E. L. (2024). Iterating Marginalized Bayes Maps for Likelihood Maximization. {\it In preperation}.
+
+    \item Yang, B., Wheeler, J., King, A., Duffy, M., Ionides, E. L. (2024). Mechanistic Models for Panel Data: Analysis of Ecological Experiments with Four Interacting Species. {\it In preparation}.
 
 \end{reflist}
 
