--- a/texDocs/myWorks.bib
+++ b/texDocs/myWorks.bib
@@ -1,5 +1,12 @@
 @preamble{ " \newcommand{\noop}[1]{} " }
 
+@article{yang24,
+  title = {Mechanistic Models for Panel Data: Analysis of Ecological Experiments with Four Interacting Species},
+  author = {Yang, Bo and Wheeler, Jesse and Ionides, Edward L.},
+  year = {2024},
+  journal = {In preperation}
+}
+
 @article{wheeler24,
   title = {Informing policy via dynamic models: Cholera in {H}aiti},
   author = {Wheeler, Jesse and Rosengart, AnnaElaine and Jiang, Zhuoxun and Tan, Kevin and Treutle, Noah and Ionides, Edward L},
@@ -38,10 +45,11 @@
   xurl = {https://arxiv.org/abs/2206.03837},
   author = {Ionides, Edward L. and Ning, Ning and Wheeler, Jesse},
   title = {An Iterated Block Particle Filter for Inference on Coupled Dynamic Systems with Shared and Unit-Specific Parameters},
-  journal = {Statistica Sinica. pre-published online},
+  journal = {Statistica Sinica},
   xjournal = {Statistica Sinica},
-  pages = {pre-published online},
-  year = {2022},
+  year = {2024},
+  volume = {34},
+  pages = {1241-1262},
   priority = {1}
 }
 
@@ -66,7 +74,7 @@
 }
 
 @article{panelpomp,
-  title = {panelPomp: Analysis of Panel Data via Partially Observed Markov Processes in R},
+  title = {panelPomp: Analysis of Panel Data via Partially Observed {M}arkov Processes in {R}},
   author = {Bret{\'o}, Carles and Wheeler, Jesse and King, Aaron A and Ionides, Edward L},
   journal = {arXiv preprint arXiv:2410.07934},
   year = {2024}
