--- a/texDocs/teachingStatement.tex
+++ b/texDocs/teachingStatement.tex
@@ -60,7 +60,7 @@ Through project-based learning, students can delve deeper into subjects, collabo
 
 In my teaching experience, I have observed that well-crafted homework assignments significantly enhance learning outcomes without causing undue stress.
 For instance, I taught a lab course for the same undergraduate statistics class over two semesters, each under the supervision of different faculty members.
-One professor assigned lengthy and technically challenging homework each week, operating under the assumption that students would benefit from grappling with difficult problems independently.
+One professor assigned lengthy and technically challenging homework each week, operating under the assumption that students would benefit from independently grappling with difficult problems.
 In contrast, the other instructor designed guided homework assignments that introduced complex concepts in a gradual and educational manner.
 The students who received thoughtfully crafted assignments experienced less stress throughout the semester and demonstrated a deeper understanding of the course materials by its end.
 This comparison has reinforced my belief in the importance of designing assignments that both challenge and support students, fostering an engaging and productive learning environment.
