recent CV updates

--- a/texDocs/cv.tex
+++ b/texDocs/cv.tex
@@ -142,9 +142,8 @@ Graduated as valedictorian of the College of Science, class of 2020
 \begin{interests}
     \item Time Series Analysis
     \item Mechanistic Models
-    \item Infectious Disease Modeling
-    \item Modeling Dynamic Ecological Systems
     \item Statistical Practice and Data Science
+    \item Modeling Dynamic Ecological Systems
 
 \end{interests}
 
@@ -178,11 +177,11 @@ Graduated as valedictorian of the College of Science, class of 2020
 
 \begin{reflist}
 
-    \item Wheeler, J., Ionides, E. L. (2024). Likelihood Based Inference for ARMA models. {\it arXiv:2310.01198}. {\it In review}.
-
-    \item Bret\'o, C., Wheeler, J., King, A., Ionides, E. L. (2024). panelPomp: Analysis of Panel Data via Partially Observed Markov Processes in R. {\it arXiv:2410.07934}. {\it In review}.
+    \item Wheeler, J., Ionides, E. L. (2024). Likelihood Based Inference for ARMA models. {\it arXiv:2310.01198}. {\it In review at The American Statistician}.
 
     \item Wheeler, J., Abkemeier, A. A., Ionides, E. L. (2024). Iterating Marginalized Bayes Maps for Likelihood Maximization. {\it In preperation}.
+
+    \item Bret\'o, C., Wheeler, J., King, A., Ionides, E. L. (2024). panelPomp: Analysis of Panel Data via Partially Observed Markov Processes in R. {\it arXiv:2410.07934}. {\it In review at The R Journal}.
 
     \item Yang, B., Wheeler, J., King, A., Duffy, M., Ionides, E. L. (2024). Mechanistic Models for Panel Data: Analysis of Ecological Experiments with Four Interacting Species. {\it In preparation}.
 
@@ -251,10 +250,11 @@ Graduated as valedictorian of the College of Science, class of 2020
 \noindent \textbf{University of Michigan} \hfill  {\textit{2020--Present}}
 
 \begin{teachinglsit}
-    \item \textbf{Stats 531}, {\it Office hours / Grading} \hfill (Modeling and Analysis of Time Series Data)
     \item \textbf{Stats 604}, {\it Lab Instructor} \hfill (Statistical Practice)
-    \item \textbf{Summer Math Boot Camp} \hfill (Calculus, Linear Algebra, Probability, Computing)
+    \item \textbf{Stats 531}, {\it Office hours / Grading} \hfill (Modeling and Analysis of Time Series Data)
+    \item \textbf{Stats 415}, {\it Lab Instructor} \hfill (Introduction to Statistical Learning)
     \item \textbf{Stats 306}, {\it Lab Instructor} \hfill (Introduction to Statistical Computing)
+    \item \textbf{Summer Math Boot Camp} \hfill (Calculus, Linear Algebra, Probability, Computing)
     \item \textbf{Workshop} {\it Developing a personal academic website} \hfill (Student Seminar Series)
     \item \textbf{Tutor}, {\it Master's level Rackham Merit Fellows} \hfill (Probability and Regression)
 
@@ -277,6 +277,7 @@ Graduated as valedictorian of the College of Science, class of 2020
 
 \begin{reflist}
 
+  \item Peter Yang. {\it Ongoing}. Applications of Partially Observed Markov Processes with phylogenetic data.
   \item Weizhe Sun. Model Based Inference of Stochastic Volatility via Iterated Filtering. Honors thesis, 2024.
   \item Zuyuan Han. Signature Methods in Variance Swap Pricing. Honors thesis, 2023.
   \item Bo Yang. Analysis of Panel Data via Mechanistic Models in a PanelPOMP Framework. Honors thesis, 2023.
@@ -313,5 +314,9 @@ Graduated as valedictorian of the College of Science, class of 2020
 
 \vspace{2mm}
 \noindent Contributor to open source R packages \textbf{pomp} and \textbf{spatPomp}, both available on CRAN.
+
+\section*{Consulting}
+
+\noindent Campfire Interactive, time series modeling. \hfill  {\textit{Nov 2024--Jan 2025}}
 
 \end{document}
