--- a/texDocs/cv.tex
+++ b/texDocs/cv.tex
@@ -14,7 +14,7 @@
 \cfoot {\thepage}
 \rfoot{}
 \title{JesseWheelerCV}
-\author{jeswheel }
+\author{jeswheel}
 \date{January 2023}
 
 \sectionfont{
@@ -125,7 +125,7 @@ Ann Arbor MI 48109-1107 \>
 
 \section*{Education}
 
-{\bf PhD in Statistics} \hfill {\textit{2020--Present}}
+{\bf PhD in Statistics} \hfill {\textit{2020--May 2025}}
 
 University of Michigan, Ann Arbor, MI.
 
@@ -179,11 +179,11 @@ Graduated as valedictorian of the College of Science, class of 2020
 
     \item Wheeler, J., Ionides, E. L. (2024). Likelihood Based Inference for ARMA models. {\it arXiv:2310.01198}. {\it In review at The American Statistician}.
 
-    \item Wheeler, J., Abkemeier, A. A., Ionides, E. L. (2024). Iterating Marginalized Bayes Maps for Likelihood Maximization. {\it In preperation}.
+    \item Wheeler, J., Abkemeier, A. A., Ionides, E. L. (2024). Iterating Marginalized Bayes Maps for Likelihood Maximization. {\it In preperation for the Journal of the American Statistical Association}.
 
     \item Bret\'o, C., Wheeler, J., King, A., Ionides, E. L. (2024). panelPomp: Analysis of Panel Data via Partially Observed Markov Processes in R. {\it arXiv:2410.07934}. {\it In review at The R Journal}.
 
-    \item Yang, B., Wheeler, J., King, A., Duffy, M., Ionides, E. L. (2024). Mechanistic Models for Panel Data: Analysis of Ecological Experiments with Four Interacting Species. {\it In preparation}.
+    \item Yang, B., Wheeler, J., King, A., Duffy, M., Ionides, E. L. (2024). Mechanistic Models for Panel Data: Analysis of Ecological Experiments with Four Interacting Species. {\it In preparation for Journal of the American Statistical Association, Case Studies}.
 
 \end{reflist}
 
@@ -277,7 +277,7 @@ Graduated as valedictorian of the College of Science, class of 2020
 
 \begin{reflist}
 
-  \item Peter Yang. {\it Ongoing}. Applications of Partially Observed Markov Processes with phylogenetic data.
+  \item Peter Yang. Applications of Partially Observed Markov Processes with phylogenetic data. Honors thesis, 2025.
   \item Weizhe Sun. Model Based Inference of Stochastic Volatility via Iterated Filtering. Honors thesis, 2024.
   \item Zuyuan Han. Signature Methods in Variance Swap Pricing. Honors thesis, 2023.
   \item Bo Yang. Analysis of Panel Data via Mechanistic Models in a PanelPOMP Framework. Honors thesis, 2023.
@@ -286,6 +286,8 @@ Graduated as valedictorian of the College of Science, class of 2020
 \end{reflist}
 
 \subsection*{Awards}
+
+\noindent\hspace{5mm}\textbf{Outstanding Graduate Student Instructor Team Award.} \hfill {\textit{2025}}
 
 \hspace{5mm}\textbf{Outstanding Undergraduate Recitation Leader} \hfill  {\textit{2019}}
 
