--- a/texDocs/myWorks.bib
+++ b/texDocs/myWorks.bib
@@ -1,12 +1,5 @@
 @preamble{ " \newcommand{\noop}[1]{} " }
 
-@article{yang24,
-  title = {Mechanistic Models for Panel Data: Analysis of Ecological Experiments with Four Interacting Species},
-  author = {Yang, Bo and Wheeler, Jesse and Ionides, Edward L.},
-  year = {2024},
-  journal = {In preperation}
-}
-
 @article{wheeler24,
   title = {Informing policy via dynamic models: Cholera in {H}aiti},
   author = {Wheeler, Jesse and Rosengart, AnnaElaine and Jiang, Zhuoxun and Tan, Kevin and Treutle, Noah and Ionides, Edward L},
@@ -19,18 +12,6 @@
   priority = {1}
 }
 
-@article{wagstaff24,
-  title = {Adaptive Mapping of Design Ground Snow Loads in the Conterminous United States},
-  author = {Wagstaff, Jadon and Bean, Brennan and Wheeler, Jesse and Maguire, Marc and Sun, Yan},
-  journal = {Journal of Structural Engineering},
-  volume = {150},
-  number = {1},
-  pages = {04023193},
-  year = {2024},
-  publisher = {American Society of Civil Engineers},
-  priority = {1}
-}
-
  @article{wheelerARMA,
     author  = {Wheeler, Jesse and Ionides, Edward L.},
     year    = {2023},
@@ -38,6 +19,25 @@
     title = {Likelihood Based Inference of {ARMA} Models},
     doi = {arXiv.2310.01198},
     priority = {1}
+}
+
+@article{panelpomp,
+  title = {panelPomp: Analysis of Panel Data via Partially Observed {M}arkov Processes in {R}},
+  author = {Bret{\'o}, Carles and Wheeler, Jesse and King, Aaron A and Ionides, Edward L},
+  journal = {The {R} Journal},
+  year = {2025},
+  pages = {to appear},
+  doi = {arXiv:2410.07934v2},
+  priority = {1}
+}
+
+@article{yang24,
+  title = {Mechanistic Models for Panel Data: Analysis of Ecological Experiments with Four Interacting Species},
+  author = {Yang, Bo and Wheeler, Jesse and Ionides, Edward L.},
+  year = {2025},
+  journal = {ArXiv preprint},
+  doi = {arXiv:2506.04508v2},
+  priority = {1}
 }
 
 @article{ionides22,
@@ -65,17 +65,22 @@
   priority = {1}
 }
 
+@article{wagstaff24,
+  title = {Adaptive Mapping of Design Ground Snow Loads in the Conterminous United States},
+  author = {Wagstaff, Jadon and Bean, Brennan and Wheeler, Jesse and Maguire, Marc and Sun, Yan},
+  journal = {Journal of Structural Engineering},
+  volume = {150},
+  number = {1},
+  pages = {04023193},
+  year = {2024},
+  publisher = {American Society of Civil Engineers},
+  priority = {1}
+}
+
 @article{wheeler2023-b,
     author = {Wheeler, Jesse and Ionides, Edward L.},
     year = "\noop{3002}Working Paper",
     title = {Block Panel Iterated Filtering for Unit-Specific Parameters},
     journal = {TBD},
     working = {Working Paper}
-}
-
-@article{panelpomp,
-  title = {panelPomp: Analysis of Panel Data via Partially Observed {M}arkov Processes in {R}},
-  author = {Bret{\'o}, Carles and Wheeler, Jesse and King, Aaron A and Ionides, Edward L},
-  journal = {arXiv preprint arXiv:2410.07934},
-  year = {2024}
 }
