--- a/index.qmd
+++ b/index.qmd
@@ -26,8 +26,8 @@ I am an Assistant Professor in the Department of Mathematics and Statistics at I
 My research focuses on time series analysis through likelihood-based inference algorithms for state space models. 
 I work at the intersection of methodology, applications, and software development related to these models. 
 The unifying theme of my work in statistics and computing is to empower researchers to fit models of scientific interest, rather than being limited to models that are mathematically convenient.
-While my primary application area has been modeling infectious disease outbreaks, I am also interested in various other topics and applications, including ecology, fisheries, and agriculture.
 
+While my primary application area has been modeling infectious disease outbreaks, I am also interested in various other topics and applications, including ecology, fisheries, and agriculture.
 If you are interested in learning more about my research or are interested in collaborating, do not hesitate to reach out to me via email (jessewheeler@isu.edu).
 
 ---
@@ -99,7 +99,7 @@ cat(out)
 ## Software 
 
 - [arima2](https://github.com/jeswheel/arima2): This library aids maximum likelihood estimation of parameters of ARIMA time series models. The package is currently on [CRAN](https://cran.r-project.org/web/packages/arima2/index.html), and there is an associated pre-print paper on [ArXiv](https://arxiv.org/abs/2310.01198).
-- [panelPomp](https://panelPomp-org.github.io): This R package on [CRAN](https://cran.r-project.org/web/packages/panelPomp/index.html) is used for inference of [Panel POMP models](https://doi.org/10.1080/01621459.2019.1604367). As associated software paper was recently accepted at The R Journal (). 
+- [panelPomp](https://panelPomp-org.github.io): This R package on [CRAN](https://cran.r-project.org/web/packages/panelPomp/index.html) is used for inference of [Panel POMP models](https://doi.org/10.1080/01621459.2019.1604367). As associated software paper was recently accepted at The R Journal ([ArXiv.2410.07934v2](https://arxiv.org/abs/2410.07934)). 
 
 ---
 
