--- a/texDocs/cv.tex
+++ b/texDocs/cv.tex
@@ -113,19 +113,20 @@
 %\vspace{1mm}
 
 \begin{tabbing}
-University of Michiganxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\= \kill
-Department of Statistics \>  % phone: (734) 615-3332
-{\url{https://jeswheel.github.io/}}
+Idaho State Universityxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\= \kill
+Assistant Professor \>
+{\url{https://jeswheel.github.io/}}\\
+Department of Mathematics and Statistics \>  % phone: (734) 615-3332
+Email: {jessewheeler@isu.edu}
 \\
-University of Michigan\> % fax: (734) 763-4676
-Email: {jeswheel@umich.edu}
+Idaho State University\> % fax: (734) 763-4676
 \\
-Ann Arbor MI 48109-1107 \>
+Pocatello, ID 83209 \>
 \end{tabbing}
 
 \section*{Education}
 
-{\bf PhD in Statistics} \hfill {\textit{2020--May 2025}}
+{\bf PhD in Statistics} \hfill {\textit{2020--2025}}
 
 University of Michigan, Ann Arbor, MI.
 
@@ -150,6 +151,8 @@ Graduated as valedictorian of the College of Science, class of 2020
 \subsection*{Peer Reviewed Publications}
 
 \begin{reflist}
+
+    \item Bret\'o, C., Wheeler, J., King, A., Ionides, E. L. (2025). panelPomp: Analysis of Panel Data via Partially Observed Markov Processes in R. {\it arXiv:2410.07934}. {\it The R Journal}, to appear.
 
     \item Ionides, E. L., Ning, N. and Wheeler, J. (2024). An iterated block particle filter for inference on coupled dynamic systems with shared and unit-specific parameters. {\it Statistica Sinica}, 34, 1241-1262. doi:10.5705/ss.202022.0188.
 
@@ -177,13 +180,12 @@ Graduated as valedictorian of the College of Science, class of 2020
 
 \begin{reflist}
 
-    \item Wheeler, J., Ionides, E. L. (2024). Likelihood Based Inference for ARMA models. {\it arXiv:2310.01198}. {\it In review at The American Statistician}.
+    \item Wheeler, J., Ionides, E. L. (2024). Likelihood Based Inference for ARMA models. {\it arXiv:2310.01198}. {\it In review at PLOS ONE}.
 
-    \item Wheeler, J., Abkemeier, A. A., Ionides, E. L. (2024). Iterating Marginalized Bayes Maps for Likelihood Maximization. {\it In preperation for the Journal of the American Statistical Association}.
+    \item Wheeler, J., Abkemeier, A. A., Ionides, E. L. (2025). Iterating Marginalized Bayes Maps for Likelihood Maximization. {\it In preperation for the Journal of the American Statistical Association}.
 
-    \item Bret\'o, C., Wheeler, J., King, A., Ionides, E. L. (2024). panelPomp: Analysis of Panel Data via Partially Observed Markov Processes in R. {\it arXiv:2410.07934}. {\it In review at The R Journal}.
 
-    \item Yang, B., Wheeler, J., King, A., Duffy, M., Ionides, E. L. (2024). Mechanistic Models for Panel Data: Analysis of Ecological Experiments with Four Interacting Species. {\it In preparation for Journal of the American Statistical Association, Case Studies}.
+    \item Yang, B., Wheeler, J., King, A., Duffy, M., Ionides, E. L. (2024). Mechanistic Models for Panel Data: Analysis of Ecological Experiments with Four Interacting Species. {\it Submitted to the Journal of the American Statistical Association, Case Studies}.
 
 \end{reflist}
 
