--- a/texDocs/cv.tex
+++ b/texDocs/cv.tex
@@ -130,7 +130,11 @@ Pocatello, ID 83209 \>
 
 University of Michigan, Ann Arbor, MI.
 
+Thesis Title: ``Innovations in Likelihood-Based Inference for State Space Models"
+
 Thesis Advisor: Edward Ionides
+
+\vspace{2mm}
 
 \noindent{\bf B.S. in Mathematics, Statistics, Minor in Computer Science } \hfill  {\textit{2016--2020}}
 
@@ -254,13 +258,16 @@ Graduated as valedictorian of the College of Science, class of 2020
 \begin{teachinglsit}
     \item \textbf{Stats 604}, {\it Lab Instructor} \hfill (Statistical Practice)
     \item \textbf{Stats 531}, {\it Office hours / Grading} \hfill (Modeling and Analysis of Time Series Data)
-    \item \textbf{Stats 415}, {\it Lab Instructor} \hfill (Introduction to Statistical Learning)
+    \item \textbf{Datasci 415}, {\it Lab Instructor} \hfill (Introduction to Statistical Learning)
     \item \textbf{Stats 306}, {\it Lab Instructor} \hfill (Introduction to Statistical Computing)
     \item \textbf{Summer Math Boot Camp} \hfill (Calculus, Linear Algebra, Probability, Computing)
     \item \textbf{Workshop} {\it Developing a personal academic website} \hfill (Student Seminar Series)
     \item \textbf{Tutor}, {\it Master's level Rackham Merit Fellows} \hfill (Probability and Regression)
 
 \end{teachinglsit}
+
+\vspace{2mm}
+\noindent \textbf{SISMID (2025)}. Instructor for a short course on {\it Simulation based inference for Epidemiological Dynamics} at the Summer Institute in Statistics Modeling in Infectious Diseases (SISMID). Emory University, Atlanta, Georgia.
 
 \vspace{2mm}
 \noindent \textbf{SISMID (2022)}. Instructor for a short course on {\it Simulation based inference for Epidemiological Dynamics} at the Summer Institute in Statistics Modeling in Infectious Diseases (SISMID). University of Washington, Seattle.
