--- a/texDocs/cv.tex
+++ b/texDocs/cv.tex
@@ -225,6 +225,9 @@ Graduated as valedictorian of the College of Science, class of 2020
 
 \subsection*{Awards}
 
+\noindent\hspace{5mm}\textbf{StatsForward Fellowship}, The American Statistical Association. \hfill{\textit{September 2025}}
+
+\vspace{2mm}
 \noindent\hspace{5mm}\textbf{Best Oral Presentation}, MSSIS 2024, University of Michigan. \hfill {\textit{2024}}
 
 \hspace{5mm}{\it Award amount: $\$200$}
