Updated arima2 paper reference

--- a/texDocs/cv.tex
+++ b/texDocs/cv.tex
@@ -156,6 +156,8 @@ Graduated as valedictorian of the College of Science, class of 2020
 
 \begin{reflist}
 
+    \item Wheeler, J., Ionides, E. L. (2025+). Revisiting Inference for ARMA Models: Improved Fits and Superior Confidence Intervals. {\it arXiv:2310.01198}. {\it PLOS One}, to appear.
+
     \item Bret\'o, C., Wheeler, J., King, A., Ionides, E. L. (2025). panelPomp: Analysis of Panel Data via Partially Observed Markov Processes in R. {\it arXiv:2410.07934}. {\it The R Journal}, to appear.
 
     \item Ionides, E. L., Ning, N. and Wheeler, J. (2024). An iterated block particle filter for inference on coupled dynamic systems with shared and unit-specific parameters. {\it Statistica Sinica}, 34, 1241-1262. doi:10.5705/ss.202022.0188.
@@ -184,7 +186,6 @@ Graduated as valedictorian of the College of Science, class of 2020
 
 \begin{reflist}
 
-    \item Wheeler, J., Ionides, E. L. (2024). Likelihood Based Inference for ARMA models. {\it arXiv:2310.01198}. {\it In review at PLOS ONE}.
 
     \item Wheeler, J., Abkemeier, A. A., Ionides, E. L. (2025). Iterating Marginalized Bayes Maps for Likelihood Maximization. {\it In preperation for the Journal of the American Statistical Association}.
 
