--- a/texDocs/myWorks.bib
+++ b/texDocs/myWorks.bib
@@ -15,7 +15,8 @@
  @article{wheelerARMA,
     author  = {Wheeler, Jesse and Ionides, Edward L.},
     year    = {2025},
-    journal = {ArXiv preprint},
+    journal = {PLOS One},
+    pages = {to appear},
     title = {Likelihood Based Inference of {ARMA} Models},
     doi = {arXiv.2310.01198},
     priority = {1}
