Minor update to CV

--- a/texDocs/cv.tex
+++ b/texDocs/cv.tex
@@ -193,9 +193,11 @@ Graduated as valedictorian of the College of Science, class of 2020
 
 \end{reflist}
 
-\subsection*{Conference Presentations}
+\subsection*{Seminars, Presentations, and Workshops}
 
 \begin{reflist}
+
+    \item \textbf{2025}\, The Geological Society of America, Connects 2025. San Antonio, TX. 
 
     \item \textbf{2024}\, Modelling and inference for pandemic preparedness. Isaac Newton Institute, Cambridge, England.
     % \item Wheeler, J., Rosengart, A., Jiang, Z., Tan, K., Treutle, N., Ionides., E. (2023). Informing Policy Via Dynamic Models: Cholera in Haiti. Contributed Paper. {\it Modelling and inference for pandemic preparedness – a focussed workshop, Isaac Newton Institute, Cambridge, England}.
