updated reference and CV

--- a/texDocs/cv.tex
+++ b/texDocs/cv.tex
@@ -156,7 +156,7 @@ Graduated as valedictorian of the College of Science, class of 2020
 
 \begin{reflist}
 
-    \item Wheeler, J., Ionides, E. L. (2025+). Revisiting Inference for ARMA Models: Improved Fits and Superior Confidence Intervals. {\it arXiv:2310.01198}. {\it PLOS One}, to appear.
+    \item Wheeler, J., Ionides, E. L. (2025). Revisiting Inference for ARMA Models: Improved Fits and Superior Confidence Intervals. {\it PLOS One}, 20(10): e0333993. doi:10.1371/journal.pone.0333993.
 
     \item Bret\'o, C., Wheeler, J., King, A., Ionides, E. L. (2025). panelPomp: Analysis of Panel Data via Partially Observed Markov Processes in R. {\it arXiv:2410.07934}. {\it The R Journal}, to appear.
 
@@ -198,7 +198,7 @@ Graduated as valedictorian of the College of Science, class of 2020
 
 \begin{reflist}
 
-    \item \textbf{2025}\, The Geological Society of America, Connects 2025. San Antonio, TX. 
+    \item \textbf{2025}\, The Geological Society of America, Connects 2025. San Antonio, TX.
 
     \item \textbf{2024}\, Modelling and inference for pandemic preparedness. Isaac Newton Institute, Cambridge, England.
     % \item Wheeler, J., Rosengart, A., Jiang, Z., Tan, K., Treutle, N., Ionides., E. (2023). Informing Policy Via Dynamic Models: Cholera in Haiti. Contributed Paper. {\it Modelling and inference for pandemic preparedness – a focussed workshop, Isaac Newton Institute, Cambridge, England}.
