--- a/texDocs/myWorks.bib
+++ b/texDocs/myWorks.bib
@@ -12,13 +12,19 @@
   priority = {1}
 }
 
- @article{wheelerARMA,
-    author  = {Wheeler, Jesse and Ionides, Edward L.},
-    year    = {2025},
-    journal = {PLOS One},
-    pages = {to appear},
-    title = {Likelihood Based Inference of {ARMA} Models},
-    doi = {arXiv.2310.01198},
+@article{wheelerARMA,
+    doi = {10.1371/journal.pone.0333993},
+    author = {Wheeler, Jesse and Ionides, Edward L.},
+    journal = {PLOS ONE},
+    publisher = {Public Library of Science},
+    title = {Revisiting inference for ARMA models: Improved fits and superior confidence intervals},
+    year = {2025},
+    month = {10},
+    volume = {20},
+    xurl = {https://doi.org/10.1371/journal.pone.0333993},
+    pages = {1-19},
+    xabstract = {Autoregressive moving average (ARMA) models are widely used for analyzing time series data. However, standard likelihood-based inference methodology for ARMA models has avoidable limitations. We show that currently accepted standards for ARMA likelihood maximization frequently lead to sub-optimal parameter estimates. Existing algorithms have theoretical support, but can result in parameter estimates that correspond to a local optimum. While this possibility has been previously identified, it remains unknown to most users, and no routinely applicable algorithm has been developed to resolve the issue. We introduce a novel random initialization algorithm, designed to take advantage of the structure of the ARMA likelihood function, which overcomes these optimization problems. Additionally, we show that profile likelihoods provide superior confidence intervals to those based on the Fisher information matrix. The efficacy of the proposed methodology is demonstrated through a data analysis example and a series of simulation studies. This work makes a significant contribution to statistical practice by identifying and resolving under-recognized shortcomings of existing procedures that frequently arise in scientific and industrial applications.},
+    number = {10},
     priority = {1}
 }
 
