--- a/texDocs/cv.tex
+++ b/texDocs/cv.tex
@@ -156,9 +156,9 @@ Graduated as valedictorian of the College of Science, class of 2020
 
 \begin{reflist}
 
-    \item Wheeler, J., Ionides, E. L. (2025+). Revisiting Inference for ARMA Models: Improved Fits and Superior Confidence Intervals. {\it arXiv:2310.01198}. {\it PLOS One}, to appear.
+    \item Wheeler, J., Ionides, E. L. (2025). Revisiting Inference for ARMA Models: Improved Fits and Superior Confidence Intervals. {\it PLOS ONE}, 20(10): e0333993. doi:10.1371/journal.pone.0333993
 
-    \item Bret\'o, C., Wheeler, J., King, A., Ionides, E. L. (2025). panelPomp: Analysis of Panel Data via Partially Observed Markov Processes in R. {\it arXiv:2410.07934}. {\it The R Journal}, to appear.
+    \item Bret\'o, C., Wheeler\footnote{Corresponding Author}, J., King, A., Ionides, E. L. (2025). panelPomp: Analysis of Panel Data via Partially Observed Markov Processes in R. {\it The R Journal}, 17, 180-199. doi:10.32614/RJ-2025-009.
 
     \item Ionides, E. L., Ning, N. and Wheeler, J. (2024). An iterated block particle filter for inference on coupled dynamic systems with shared and unit-specific parameters. {\it Statistica Sinica}, 34, 1241-1262. doi:10.5705/ss.202022.0188.
 
@@ -190,7 +190,7 @@ Graduated as valedictorian of the College of Science, class of 2020
     \item Wheeler, J., Abkemeier, A. A., Ionides, E. L. (2025). Iterating Marginalized Bayes Maps for Likelihood Maximization. {\it In preperation for the Journal of the American Statistical Association}.
 
 
-    \item Yang, B., Wheeler, J., King, A., Duffy, M., Ionides, E. L. (2024). Mechanistic Models for Panel Data: Analysis of Ecological Experiments with Four Interacting Species. {\it Submitted to the Journal of the American Statistical Association, Case Studies}.
+    \item Yang, B., Wheeler, J., King, A., Duffy, M., Ionides, E. L. (2025+). Mechanistic Models for Panel Data: Analysis of Ecological Experiments with Four Interacting Species. {\it Submitted to the Journal of the American Statistical Association, Case Studies}.
 
 \end{reflist}
 
@@ -198,7 +198,7 @@ Graduated as valedictorian of the College of Science, class of 2020
 
 \begin{reflist}
 
-    \item \textbf{2025}\, The Geological Society of America, Connects 2025. San Antonio, TX. 
+    \item \textbf{2025}\, The Geological Society of America, Connects 2025 (Poster). San Antonio, TX. 
 
     \item \textbf{2024}\, Modelling and inference for pandemic preparedness. Isaac Newton Institute, Cambridge, England.
     % \item Wheeler, J., Rosengart, A., Jiang, Z., Tan, K., Treutle, N., Ionides., E. (2023). Informing Policy Via Dynamic Models: Cholera in Haiti. Contributed Paper. {\it Modelling and inference for pandemic preparedness – a focussed workshop, Isaac Newton Institute, Cambridge, England}.
@@ -209,17 +209,17 @@ Graduated as valedictorian of the College of Science, class of 2020
     \item \textbf{2023}\, Bayes Comp 2023, Satellite Event: Bayesian Inference of Epidemics. Levi, Finland.
     % \item Wheeler, J., Rosengart, A., Jiang, Z., Tan, K., Treutle, N., Ionides., E. (2023). Informing Policy Via Dynamic Models: Cholera in Haiti. Contributed Paper. {\it Bayes Comp 2023, Satellite Event: Bayesian Inference of Epidemics, Levi, Finland}.
 
-    \item \textbf{2023}\, Models of Infectious Disease Agent Study (MIDAS) Network Annual Meeting. Atlanta, GA.
+    \item \textbf{2023}\, Models of Infectious Disease Agent Study (MIDAS) Network Annual Meeting (Poster). Atlanta, GA.
 
     \item \textbf{2022}\, JSM 2022. Washington D.C.
     % \item Wheeler, J., Rosengart, A., Jiang, J., Ionides, E. (2022). Eliminating Cholera in Haiti: Combining Dynamic Models with Data to Inform Vaccination Policy. Contributed Paper. {\it JSM 2022, Washington D.C.}.
 
      \item \textbf{2020}\, National Conference on Undergraduate Research. Online (COVID-19).
 
-    \item \textbf{2020}\, USU Student Research Symposium. Logan, UT.
+    \item \textbf{2020}\, USU Student Research Symposium (Poster). Logan, UT.
     % \item Wheeler, J., Bean, B. (2020). Estimating Snow Water Equivalence Using Easily Obtainable Climate Variables. USU Student Research Symposium.
 
-    \item \textbf{2020}\, Utah Conference on Undergraduate Research. Logan, UT.
+    \item \textbf{2020}\, Utah Conference on Undergraduate Research (Poster). Logan, UT.
     % \item Wheeler, J., Lindstrom, C., Christensen, R., Moon, K. (2020). Poster: GPS-Denied Navigation Using SAR Images and Neural Networks. {\it Utah Conference on Undergraduate Research, Logan, UT}.
 
     % \item Christensen, D., Villanueva, I., Wheeler, J., Vicioso, P., Husman, J., Lampkins, S., Youmans, K. (2019). Exploring Potential Relationships Between Self-Efficacy, Performance, and Electrodermal Activity in Engineering Exams. {\it American Educational Research Association.} April 5-9. Toronto, Canada.
@@ -259,7 +259,14 @@ Graduated as valedictorian of the College of Science, class of 2020
 
 \section*{Teaching}
 
-\noindent \textbf{University of Michigan} \hfill  {\textit{2020--Present}}
+\noindent \textbf{Idaho State University} \hfill  {\textit{2025--present}}
+
+\begin{teachinglsit}
+  \item \textbf{Math 4450/5450}, Fall 2025 \hfill (Mathematical Statistics I)
+  \item \textbf{Math 3350}, Fall 2025 \hfill (Calculus-based introduction to statistics)
+\end{teachinglsit}
+
+\noindent \textbf{University of Michigan} \hfill  {\textit{2020--2025}}
 
 \begin{teachinglsit}
     \item \textbf{Stats 604}, {\it Lab Instructor} \hfill (Statistical Practice)
