--- a/texDocs/myWorks.bib
+++ b/texDocs/myWorks.bib
@@ -13,12 +13,15 @@
 }
 
  @article{wheelerARMA,
-    author  = {Wheeler, Jesse and Ionides, Edward L.},
-    year    = {2025},
-    journal = {PLOS One},
-    pages = {to appear},
-    title = {Likelihood Based Inference of {ARMA} Models},
-    doi = {arXiv.2310.01198},
+    author = {Wheeler, Jesse and Ionides, Edward L.},
+    title = {Revisiting inference for {ARMA} models: Improved fits and superior confidence intervals},
+    year = {2025},
+    journal = {PLOS ONE},
+    month = {10},
+    volume = {20},
+    doi = {10.1371/journal.pone.0333993},
+    pages = {1-19},
+    number = {10},
     priority = {1}
 }
 
@@ -27,8 +30,12 @@
   author = {Bret{\'o}, Carles and Wheeler, Jesse and King, Aaron A and Ionides, Edward L},
   journal = {The {R} Journal},
   year = {2025},
-  pages = {to appear},
-  doi = {arXiv:2410.07934v2},
+  volume = {17},
+  issue = {1},
+  issn = {2073-4859},
+  pages = {180-199},
+  doi = {10.32614/RJ-2025-009},
+  xnote = {https://doi.org/10.32614/RJ-2025-009},
   priority = {1}
 }
 
@@ -75,7 +82,7 @@
   pages = {04023193},
   year = {2024},
   publisher = {American Society of Civil Engineers},
-  priority = {1}
+  priority = {0}
 }
 
 @article{wheeler2023-b,
