--- a/texDocs/myWorks.bib
+++ b/texDocs/myWorks.bib
@@ -1,5 +1,18 @@
 @preamble{ " \newcommand{\noop}[1]{} " }
 
+@article{wheelerMPIF,
+  title = {Iterating marginalized {B}ayes maps for likelihood maximization with application to nonlinear panel models},
+  author = {Wheeler, Jesse and Abkemeier, Aaron J. and Ionides, Edward L.},
+  year = {2025},
+  eprint = {2511.17438},
+  archivePrefix = {arXiv},
+  primaryClass = {stat.ME},
+  url = {https://arxiv.org/abs/2511.17438},
+  journal = {ArXiv preprint},
+  doi = {arXiv:2511.17438},
+  priority = {1}
+}
+
 @article{wheeler24,
   title = {Informing policy via dynamic models: Cholera in {H}aiti},
   author = {Wheeler, Jesse and Rosengart, AnnaElaine and Jiang, Zhuoxun and Tan, Kevin and Treutle, Noah and Ionides, Edward L},
@@ -71,7 +84,7 @@
   pages = {04021019},
   year = {2022},
   publisher = {American Society of Civil Engineers},
-  priority = {1}
+  priority = {0}
 }
 
 @article{wagstaff24,
